--- a/HoangDuy D3/style.css
+++ b/HoangDuy D3/style.css
@@ -7,13 +7,20 @@ body {
     display: flex;
     justify-content: center; /* Canh giữa theo chiều ngang */
     align-items: center; /* Canh giữa theo chiều dọc */
-    height: 100vh; /* Chiều cao của màn hình */
+    height: 200vh; /* Chiều cao của màn hình */
+    flex-direction: column; 
 }
 
-#chart-container-task1,
+#chart-container-task1 {
+    display: inline-block;
+    margin-top: -200px; /* Khoảng cách giữa biểu đồ task 1 và đầu trang */
+}
+
 #chart-container-task2 {
     display: inline-block;
+    margin-top: 100px; /* Khoảng cách giữa biểu đồ task 2 và đầu trang */
 }
+
 
 svg {
     overflow: visible;
@@ -34,6 +41,7 @@ svg {
 .bar:hover {
     fill: darkorange; /* Change color on hover */
 }
+
 .axis-x-label {
-    margin-top: 1000px; /* Thêm khoảng cách 10px giữa nhãn trục x và trục hoành */
+    margin-top: 10px; /* Thêm khoảng cách 10px giữa nhãn trục x và trục hoành */
 }
